// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/vincentvtran/homeserver/proto";

package homeserver.proto;

// The greeting service definition.
service HomeService {
  // Sends a greeting
  rpc invoke(OperationRequest) returns (OperationResponse) {}
}

/**
 * Operation request and response objects
 */
message OperationRequest {
  string user_id = 1;
  OperationParameter param = 2;
}

message OperationResponse {
  string api_version = 1;
  string output = 2;
}

/**
 * Operation input parameter object
 */
 message OperationParameter {
  string payload = 1;
}